Closed Bug 543511 Opened 14 years ago Closed 14 years ago

In Firefox 3.6 Intellipoint mouse scrolling acceleration is disabled downwards, acceleration still works upwards.

Categories

(Core :: Widget: Win32, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.3a2
Tracking Status
status1.9.2 --- .2-fixed
status1.9.1 --- unaffected

People

(Reporter: urlug, Assigned: masayuki)

References

Details

(Keywords: regression, verified1.9.2)

Attachments

(1 file, 1 obsolete file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.7) Gecko/20091221 Firefox/3.5.7 (.NET CLR 3.5.30729)
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.7) Gecko/20091221 Firefox/3.5.7 (.NET CLR 3.5.30729)

In Firefox 3.6 Intellipoint mouse scrolling acceleration is disabled downwards, acceleration still works upwards. In Firefox 3.5.7 (which I reverted back to) doesn't have this problem, nor does Internet Explorer, Opera, Windows Explorer or any program, I can scroll up and down with Intellipoint's acceleration normally.

I have tried using MS Intellipoint drivers 5.5 and 7.0 both with same outcome.

I read that 3.6 implemented some sort of mouse scrolling acceleration (mousewheel.acceleration.start) of its own but it is set to -1 (disabled) by default because it is still in developing stage(?). It doesn't matter if I put -1, 0, 1, 2, 3 or any number on it Intellipoint scroll acceleration still doesn't work downwards but Firefox 3.6's own acceleration works though it will be multiplied upwards because it has both FF's and Intellipoint's acceleration on.

It's VERY annoying to scroll pages up and down when upward scrolling is much faster than downward. I know I can disable the Intellipoint scrolling acceleration but then I'd lose it on all other programs like Windows Explorer plus Intellipoint's scroll acceleration feels better and more natural than FF 3.6's (for now).

My mouse is Microsoft Wheel Mouse Optical (PS/2) with Intellipoint 7.0

Reproducible: Always

Steps to Reproduce:
1. Install FF 3.6
2. Use MS Wheel Mouse Optical (or any MS mouse) + Intellipoint (5.5 ->) 7.0, make sure scrolling acceleration is on (should be by default)
3. Scroll a long page down fast and then up as fast you just did. The scrolling is much slower downwards than updwards due to disabled (downward) Intellipoint scrolling acceleration.
Actual Results:  
the scrolling was slower downwards

Expected Results:  
have acceleration when scrolling down also

Default theme used.
I tried the test in safe mode disabling addons but with the same outcome.
Attached patch Patch v1.0 (obsolete) — Splinter Review
Maybe, this is the cause.

I'll prepare the test build.
Thanks for your effort.
I set the following line (in Firefox 3.6 stable) mousewheel.system_scroll_override_on_root_content.enabled to false (like you suggested in bug #527853) and the normal (Intellipoint) scrolling acceleration now works both ways, just like in 3.5.7.

btw I tried your 3.6.2 pre and 3.7a and they worked in a sense because in them the scrolling was not faster upwards, it was the same speed both ways, though the Intellipoint scrolling acceleration was disabled both directions because mousewheel.system_scroll_override_on_root_content.enabled is set to true by default. Changed it to false and Intellipoint acceleration worked fine like in 3.6 stable after changing the same setting.
Status: UNCONFIRMED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Don't mark as resolved. Any problems are not fixed.

Thank you for your testing. I'll post a new patch which may fix the problem in default settings.
Status: RESOLVED → UNCONFIRMED
Resolution: FIXED → ---
Attached patch Patch v2.0Splinter Review
I think that we should do nothing if the given delta value is larger than the limitation delta value of our computation.

The test build will be coming.
Assignee: nobody → masayuki
Attachment #424730 - Attachment is obsolete: true
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Component: General → Widget: Win32
Product: Firefox → Core
QA Contact: general → win32
Version: unspecified → Trunk
Yep, that (v2.0_1.9.2) worked. Intellipoint scrolling acceleration worked normally both ways, even when the mousewheel.system_scroll_override_on_root_content.enabled was true (by default).
Comment on attachment 424833 [details] [diff] [review]
Patch v2.0

Thank you, urlug.

Roc, would you review this?

There are two bugs:
1. When given delta is negative, I checked the computed value with positive limitation value.
2. Even when the given delta is larger than the limitation value, I ignored the thing. We shouldn't return smaller delta value than the given value.
Attachment #424833 - Flags: review?(roc)
http://hg.mozilla.org/mozilla-central/rev/48fde4aa4334
Status: ASSIGNED → RESOLVED
Closed: 14 years ago14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a2
Comment on attachment 424833 [details] [diff] [review]
Patch v2.0

Simple mistake, and this affects some users' experience. If an user uses faster scroll settings or driver level acceleration, we are failing to compute the wheel scrolling speed. So, we're overriding the system scrolling speed by wrong computed speed.
Attachment #424833 - Flags: approval1.9.2.2?
Comment on attachment 424833 [details] [diff] [review]
Patch v2.0

a1922=beltzner
Attachment #424833 - Flags: approval1.9.2.2? → approval1.9.2.2+
I do not have a MS mouse and Intellipoint isn't installed. Urlug, would you be able to run a test against the Firefox 3.6.2 candidate build to check if it is fixed in the final release? Thanks

ftp://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/3.6.2-candidates/build3/win32/en-US/
I updated to the official 3.6.2 version and it works just fine.
mousewheel.system_scroll_override_on_root_content.enabled set to true (default)
Thanks for your feedback Urlug! Let's mark it verified fixed then.
Keywords: verified1.9.2
Kyle, can you please add at least the build identifier when marking a bug as verified? Have you used a 3.7 build?
Status: VERIFIED → RESOLVED
Closed: 14 years ago14 years ago
I haven't tested it myself.  I assumed 

(In reply to comment #16)
> Let's mark it verified fixed then.

meant you intended to mark it as verified.
> (In reply to comment #16)
> > Let's mark it verified fixed then.
> 
> meant you intended to mark it as verified.

I did with the appropriate keyword. Setting the status to verified implies testing with the version given in target milestone.
(In reply to comment #19)
> > (In reply to comment #16)
> > > Let's mark it verified fixed then.
> > 
> > meant you intended to mark it as verified.
> 
> I did with the appropriate keyword. Setting the status to verified implies
> testing with the version given in target milestone.

Ah, was not aware of the distinction.  Thanks!
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: