Bug 543511 In Firefox 3.6 Intellipoint mouse scrolling acceleration is disabled downwards, acceleration still works upwards r=roc